Fix background rendering on mobile devices

--- a/src/scss/mixins/ui/_render-background.scss
+++ b/src/scss/mixins/ui/_render-background.scss
@@ -6,10 +6,10 @@
 		speak: none;
 		position: fixed;
 		top: 0;
+		bottom: 0;
 		left: 0;
 		z-index: -1;
 		width: 100%;
-		height: 100vh;
 		background: $color-background;
 		background-image:
 			linear-gradient(127deg, nth($color-gradients, 1)),
